<resources>
    <!--  All activity  -->
    <string name="project_name">Notify</string>
    <string name="error">Error show here</string>
    <string name="Logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--  Login  -->
    <string name="app_name">Project2</string>
    <string name="login_description">Login into your Notify account</string>
    <string name="login_remember">Remember me</string>
    <string name="login_no_account">Do not have account?</string>
    <string name="login_forgot">Forgot password?</string>
    <string name="login_back">back</string>
    <string name="login_title">Login</string>
    <string name="login_username_hint">Enter your phone number</string>
    <string name="login_password_hint">Enter your password</string>
    <!--  Signup  -->
    <string name="signup_title">Sign up</string>
    <string name="signup_description">Sign up your Notify account</string>
    <string name="signup_username_hint">Full name</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_re_password_hint">Password confirm</string>
    <string name="signup_email_hint">Email address</string>
    <string name="signup_phone_hint">Phone number</string>
    <string name="signup_has_account">Already has an account?</string>
    <!-- Register -->
    <string name="register_description">Register your Notify account</string>
    <string name="register_title">Register</string>
    <string name="register_skip">Skip</string>
    <string name="phone_register_hint">Register with phone number</string>
    <string name="phone_register_switch">Register with email address</string>
    <string name="email_register_hint">Register with email address</string>
    <string name="email_register_switch">Register with phone number</string>
    <!--  OTP  -->
    <string name="otp_title">OTP Verification</string>
    <string name="verify_title">Verify</string>
    <string name="otp_no_receive">Did not receive the OTP?</string>
    <string name="otp_resend">Resend</string>
    <!--  send OTP  -->
    <string name="sendOTP_title">Active</string>
    <string name="sendOTP_phone_hint">Phone number show here</string>
    <string name="sendOtp_skip">Skip</string>
    <string name="sendOtp_change_phone">Change phone number</string>
    <!--    dash board-->
    <!--    user fragment-->
    <string name="user_fragment_title">User Setting</string>
    <string name="user_fragment_fullname">Full Name</string>
    <string name="user_fragment_phone">Phone</string>
    <string name="user_fragment_edit">Edit Profile</string>
    <string name="user_fragment_change">Change Password</string>
    <!-- view note -->
    <string name="dummy1">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32.</string>
    <string name="change_pass_hint">Change your Notify account password</string>
    <string name="change_password_title">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_confirm">New Password Confirm</string>
    <string name="save">Save</string>
    <string name="edit_profile_hint">Edit your Notify account information</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="forgot_password_hint">Recover your Notify account</string>
    <string name="forgot_password_title">Recover</string>
    <string name="enter_phone_num">Enter your phone number</string>
    <string name="send_otp">Send OTP</string>
    <string name="get_started">Get Started</string>
    <string name="otp_min">00</string>
    <string name="otp_break">:</string>
    <string name="otp_recover_hint">Recover your Notify account</string>
    <string name="otp_recover_title">OTP Recover Verification</string>
    <string name="password_recover_hint">Recover your Notify account</string>
    <string name="password_recover_title">Password Recover</string>
    <string name="title_show_here">Title show here</string>
    <string name="label_blue">Select Label</string>
    <string name="content_here">Content here</string>
    <string name="note_picture">Note picture</string>
    <string name="note_video">Note video</string>
    <string name="note_audio">Note audio</string>
    <string name="note_notification">Note notification</string>
    <string name="note_share">Note share</string>
    <string name="note_grid">Note grid</string>
    <string name="all_note">All Note</string>
    <string name="note_filter">Note filter</string>
    <string name="all_note_is_empty">All note is empty</string>
    <string name="btn_new_note">New note</string>
    <string name="pin_note_is_empty">Pin note is empty</string>
    <string name="trash_is_empty">Trash is empty</string>
    <string name="pin_note">Pin Note</string>
    <string name="ote_title_here">Note title here</string>
    <string name="note_lock">Note lock</string>
    <string name="note_menu">Note menu</string>
    <string name="day_time">Sunday 15/05/2022 12:00</string>
    <string name="new_note">New Note</string>
    <string name="app_setting">App Setting</string>
    <string name="language">Language</string>
    <string name="font">Font</string>
    <string name="delete_after">Delete After</string>
    <string name="ringtone">Ringtone</string>
    <string name="select">Select</string>
    <string name="label">Label</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="trash">Trash</string>
    <string name="note_bin">Note delete</string>
    <string name="click_here_to_active">Click here to activate your account!</string>
    <string name="view_note">View Note</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="note">Note</string>
    <string name="user">User</string>
    <string name="setting">Setting</string>
    <string name="trash2">Trash</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="change_password">Change Password</string>
    <string name="unlock">Unlock</string>
    <string name="lock">Lock</string>
    <string name="restore">Restore</string>
    <string name="edit_note">Edit Note</string>
    <string name="new_title">New Title</string>
    <!-- app setting -->
    <string-array name="languages">
        <item>English</item>
        <item>Vietnamese</item>
    </string-array>
    <string-array name="fonts">
        <item>Default</item>
        <item>Arya</item>
        <item>Cambay</item>
        <item>Oleo Script</item>
    </string-array>
    <string-array name="ringtones">
        <item>Song 1</item>
        <item>Song 2</item>
        <item>Song 3</item>
        <item>Song 4</item>
    </string-array>
</resources>