<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/recycler_item_pin"
        android:title="@string/pin" />
    <item
        android:id="@+id/recycler_item_unpin"
        android:title="@string/unpin" />
    <item
        android:id="@+id/recycler_item_edit"
        android:title="@string/edit" />
    <item
        android:id="@+id/recycler_item_changePassword"
        android:title="@string/change_password" />
    <item
        android:id="@+id/recycler_item_unlock"
        android:title="@string/unlock" />
    <item
        android:id="@+id/recycler_item_lock"
        android:title="@string/lock" />
    <item
        android:id="@+id/recycler_item_delete"
        android:title="@string/delete" />
    <item
        android:id="@+id/recycler_item_super_delete"
        android:title="@string/delete" />
    <item
        android:id="@+id/recycler_item_restore"
        android:title="@string/restore" />
</menu>