<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginPage"
    android:background="@drawable/gradient_bg"
    android:weightSum="4">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:clickable="true"
            android:id="@+id/ivSignupBack"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/login_back"
            android:src="@drawable/ic_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_centerVertical="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/project_name"
                android:textSize="48dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_description"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/login_card">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/signup_title"
            android:fontFamily="serif"
            android:textSize="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="40dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <EditText
                android:text="thai"
                android:id="@+id/textSignupUsername"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/login_edit_text"
                android:drawableTint="@color/black"
                android:fontFamily="serif"
                android:inputType="text"
                android:hint="@string/signup_username_hint"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:text="0364511405"
                android:inputType="phone"
                android:id="@+id/textSignupPhone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/login_edit_text"
                android:drawableTint="@color/black"
                android:fontFamily="serif"
                android:hint="@string/signup_phone_hint"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <com.google.android.material.textfield.TextInputLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">
                <EditText
                    android:text="123456"
                    android:inputType="textPassword"
                    android:id="@+id/textSignupPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="48dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="48dp"
                    android:background="@drawable/login_edit_text"
                    android:drawableTint="@color/black"
                    android:fontFamily="serif"
                    android:hint="@string/signup_password_hint"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/etPasswordConfirmLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">
                <EditText
                    android:text="123456"
                    android:inputType="textPassword"
                    android:id="@+id/textSignupPasswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="48dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="48dp"
                    android:background="@drawable/login_edit_text"
                    android:drawableTint="@color/black"
                    android:fontFamily="serif"
                    android:hint="@string/signup_re_password_hint"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="48dp"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/signupError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:fontFamily="serif"
                    android:hint="@string/error"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:textColor="@color/red"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="48dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignup"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button"
                    android:fontFamily="serif"
                    android:text="@string/signup_title"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="12dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:text="@string/signup_has_account"
                android:textColor="@color/black"
                android:textSize="16dp" />
            <TextView
                android:clickable="true"
                android:id="@+id/textSignupLoginAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:text="@string/login_title"
                android:textColor="@color/blue"
                android:textSize="16dp"
                android:textStyle="bold"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>